--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,8 +1,5 @@
-OM ubuntu:latest
-RUN apt-get update -y
-RUN apt-get install -y python-pip python-dev build-essential
-COPY . /app
-WORKDIR /app
+FROM python:3.7
+ADD . /web
+WORKDIR /web
 RUN pip install -r requirements.txt
-ENTRYPOINT ["python"]
-CMD ["app.py"]
+CMD python app.py
