--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3'
 services:
   web:
-    build: ./web
+    build: flask_app
     ports:
       - "5000:5000"
     volumes:
-      - ./web:/web
+      - ./flask_app:/flask_app
     depends_on:
       - redis
       - portainer
