--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,4 +2,20 @@
 version: 2.1
 jobs:
   build:
-    working_directory:
+    working_directory: ~/dev-ops
+    docker:
+      - image: circleci/python:3.7
+        environment:
+          PIPENV_VENV_IN_PROJECT: true
+      steps:
+        - checkout
+        - run:
+          name: Instal Python dependencies in a venv
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install -r requirements.txt
+        - run:
+            command: |
+              . venv/bin/activate
+              pytest
