--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,3 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
-version: 2.1
 jobs:
   build:
     docker:
@@ -18,3 +16,8 @@ jobs:
             command: |
               . venv/bin/activate
               pytest
+workflows:
+  version: 2.1
+  build_and_test:
+    jobs:
+      - build
