--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,11 +8,11 @@ jobs:
         name: Install Python dependencies in a venv
         command: |
           python3 -m venv venv
-          . venv/bin/activate
+          source venv/bin/activate
           pip install -r requirements.txt
       - run:
         command: |
-        . venv/bin/activate
+        source venv/bin/activate
         pytest
 workflows:
   version: 2.1
