--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
           command: |
             python3 -m venv venv
             source venv/bin/activate
-            pip install -r requirements.txt
+            pip install -r flask_app/requirements.txt
       - run:
           command: |
             source venv/bin/activate
