--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
       - run:
           command: |
             source venv/bin/activate
+            cd DevOps
             pytest
 workflows:
   version: 2
