--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,8 @@
+version: 2.1
+
+orbs:
+  heroku: circleci/heroku@1.0.1
+
 jobs:
   build:
     docker:
@@ -13,8 +18,15 @@ jobs:
           command: |
             source venv/bin/activate
             pytest
+
 workflows:
   version: 2
-  build_and_test:
+  heroku_deploy:
     jobs:
       - build
+      - heroku/deploy-via-git:
+        requires:
+          - build
+        filters:
+          branches:
+            only: master
